# wasp

./: .gitmodules  Cargo.toml  README.md
src/: lib.rs  main.rs
src/binary/: instr.rs  mod.rs  module.rs  types.rs
src/exec/: cast.rs  env.rs  host_env.rs  importer.rs  instr.rs  memory.rs  mod.rs  opt_vec.rs  runtime.rs  stack.rs  store.rs  table.rs  trap.rs  value.rs
src/loader/: error.rs  instructions.rs  leb128.rs  mod.rs  module.rs  parser.rs  sections.rs  types.rs  values.rs
tests/: spec.rs
