[package]
name = "wasp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "wasp"

[dev-dependencies]
wat = "*"
serde_json = "1.0"
glob = "0.3.1"
log = "0.4"
env_logger = "0.9.0"

[features]
alloc = []
std = ["alloc"]
default = ["std"]
