[package]
name = "wasp"
description = "A Webassembly interpreter written in Rust without standard library"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
readme = "README.md"
authors = ["whtsht <whiteshirt0079@gmail.com>"]
documentation = "https://docs.rs/wasp"
repository = "https://github.com/whtsht/wasp"
license = "MIT"
keywords = ["no_std", "wasm"]
exclude = [
    "tests/testsuite/**/*",
]

[[bin]]
path = "src/main.rs"
name = "wasp"

[dependencies.num-traits]
version = "0.2"
default-features = false
features = ["libm"]  

[dev-dependencies]
wat = "*"
serde_json = "1.0"
glob = "0.3.1"
log = "0.4"
env_logger = "0.9.0"

[features]
alloc = []
std = ["alloc"]
default = ["std"]

[dependencies.opt_vec]
version = "*"
default-features = false
features = ["alloc"]
